# attend-and-excite

./: .gitignore  INSTALL.md  README.md  __init__.py  pipeline_attend_and_excite.py  pyproject.toml  requirements.txt
notebooks/: compare_models.ipynb  generate_images.ipynb
utils/: ptp_utils.py
